fix: 🐛 refactor stages and set new spacings

--- a/src/components/cms/bnb-cms-contact/styles.scss
+++ b/src/components/cms/bnb-cms-contact/styles.scss
@@ -34,7 +34,7 @@
 			}
 			&__inputs {
 				width: $section-right-width;
-
+				margin-top: 0;
 			}
 		}
 	}
